--- a/website/content/en/status/report-2025-10-2025-12/openvox.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/openvox.adoc
@@ -13,7 +13,7 @@ An optional database (OpenVoxDB) can be setup for reporting and describing advan
 A lot of things happened in the Puppet world this year.
 After Perforce link:https://www.puppet.com/blog/open-source-puppet-updates-2025[announced major changes regarding how they contribute to Open-Source], they discontinued the Open Source version of Puppet (also known as OSS Puppet), advising users to switch to Puppet Enterprise (closed source flavor of Puppet that has existed for years) or Puppet Core (a new closed source flavor of Puppet, not developed in the open, and link:https://voxpupuli.org/blog/2025/05/19/perforce-eula/[accessible only after signing an End-User License Agreement (EULA)]).
 The Vox Pupuli community tried to reason with Perforce, but without success.
-Vox Pupuli therefore took maintainership of the Apache-2.0 licensed Puppet code, and continue to maintain it, update it, provide packages, in place of its failing editor.
+Vox Pupuli therefore took maintainership of the Apache-2.0 licensed Puppet code, and continue to maintain it, update it, provide packages, instead of Perforce.
 The name "Puppet" being owned by Perforce, the project has been renamed to "OpenVox" in order for users to not confuse the old unmaintained Open-Source Puppet with the new version maintained by OpenVoxProject, which is part of Vox Pupuli.
 
 To follow these changes, a bunch of ports have been added to the FreeBSD ports tree:
