handbook/desktop: Refresh Plasma
I tried running plasma wayland on 15.0, it works great! CPU usage
is a tad high, but I'm impressed! Freshen the branding and language
in this chapter to highlight this. Remove a stale note about adjusting
message sizes to what is now the default. Tell the reader how to search
the kde-applications category. Add instructions to launch with wayland.

Reviewed by:		carlavilla (previous), makc
Differential Revision:	https://reviews.freebsd.org/D54207

--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -4,7 +4,7 @@ part: Part II. Common Tasks
 prev: books/handbook/partii
 next: books/handbook/multimedia
 description: This chapter demonstrates how to install numerous desktop environments, including web browsers, productivity software, document viewers, and financial software
-tags: ["desktop", "KDE Plasma", "GNOME", "XFCE", "MATE", "Cinnamon", "LXQT", "browsers", "Firefox", "Chromium", "Iridium", "Falkon", "Konqueror", "Epiphany", "qutebrowser", "Dillo", "Links", "w3m", "Development tools", "Visual Studio Code", "Qt Creator", "Kdevelop", "Eclipse IDE", "Vim", "Neovim", "GNU Emacs", "Productivity", "LibreOffice", "Calligra", "AbiWord", "Viewers", "Okular", "Evince", "ePDFView", "Xpdf", "Finance", "KMyMoney", "GnuCash"]
+tags: ["desktop", "KDE", "Plasma", "GNOME", "XFCE", "MATE", "Cinnamon", "LXQT", "browsers", "Firefox", "Chromium", "Iridium", "Falkon", "Konqueror", "Epiphany", "qutebrowser", "Dillo", "Links", "w3m", "Development tools", "Visual Studio Code", "Qt Creator", "Kdevelop", "Eclipse IDE", "Vim", "Neovim", "GNU Emacs", "Productivity", "LibreOffice", "Calligra", "AbiWord", "Viewers", "Okular", "Evince", "ePDFView", "Xpdf", "Finance", "KMyMoney", "GnuCash"]
 showBookMenu: true
 weight: 11
 params:
@@ -73,7 +73,7 @@ A desktop environment can range from a simple window manager to a complete suite
 |===
 | Name | License | Package
 
-| KDE Plasma
+| Plasma
 | GPL 2.0 or later
 | package:x11/kde[]
 
@@ -100,27 +100,36 @@ A desktop environment can range from a simple window manager to a complete suite
 |===
 
 [[kde-environment]]
-=== KDE Plasma
+=== Plasma
 
-KDE Plasma is an easy-to-use desktop environment.
+Plasma is a easy-to-use desktop environment made by the KDE community.
 This desktop provides a suite of applications with a consistent look and feel, a standardized menu and toolbars, keybindings, color-schemes, internationalization, and a centralized, dialog-driven desktop configuration.
-More information on KDE can be found at the link:https://kde.org/[KDE homepage].
+
+More information on Plasma can be found at the link:https://kde.org/plasma-desktop[Plasma homepage].
 For FreeBSD-specific information, consult the link:https://freebsd.kde.org/[FreeBSD homepage at KDE].
 
 [[kde-meta-install]]
-==== Install KDE Plasma meta package
+==== Install Plasma meta package
 
-To install the KDE Plasma meta package with KDE Frameworks, Plasma Desktop and Applications execute:
+To install the Plasma desktop with a basic set of KDE Applications, execute:
 
 [source,shell]
 ....
 # pkg install kde
 ....
 
-[[kde-minimal-install]]
-==== Minimal KDE Plasma installation
+Additional KDE Applications are tagged with the `kde-applications` category.
+Search for them by executing the following command:
 
-To install a minimal KDE Plasma execute:
+[source,shell]
+....
+% pkg search -S origin kde-applications
+....
+
+[[kde-minimal-install]]
+==== Minimal Plasma installation
+
+To install a minimal Plasma desktop, execute:
 
 [source,shell]
 ....
@@ -130,7 +139,7 @@ To install a minimal KDE Plasma execute:
 [TIP]
 ====
 This installation is *really* minimal.
-Konsole must be installed separately executing:
+The Konsole terminal emulator must be installed separately executing:
 
 [source,shell]
 ....
@@ -139,39 +148,22 @@ Konsole must be installed separately executing:
 ====
 
 [[kde-configuration]]
-==== Configure KDE Plasma
+==== Configure Plasma
 
-KDE Plasma uses man:dbus-daemon[1] for a message bus and hardware abstraction.
-This application is automatically installed as a dependency of KDE Plasma.
+Plasma uses man:dbus-daemon[1] for a message bus and hardware abstraction.
+This application is automatically installed as a dependency of Plasma.
 
-Enable D-BUS service in `/etc/rc.conf` to start at system boot:
+Enable the D-Bus service in man:rc.conf[5] to start at system boot:
 
 [source,shell]
 ....
 # sysrc dbus_enable="YES"
 ....
 
-KDE Plasma requires larger message sizes for optimal performance.
-
-Add the following lines to man:sysctl.conf[5]:
-
-[.programlisting]
-....
-sysctl net.local.stream.recvspace=65536
-sysctl net.local.stream.sendspace=65536
-....
-
-To apply the change, either run the following command as root or simply reboot the system:
-
-[source,shell]
-....
-# sysctl -f /etc/sysctl.conf
-....
-
 [[kde-start]]
-==== Start KDE Plasma
+==== Start Plasma
 
-The preferred KDE Plasma display manager is package:x11/sddm[].
+The preferred way to start Plasma is automatically via the package:x11/sddm[] display manager.
 To install package:x11/sddm[], execute:
 
 [source,shell]
@@ -179,26 +171,33 @@ To install package:x11/sddm[], execute:
 # pkg install sddm
 ....
 
-Enable SDDM service in `/etc/rc.conf` to start at system boot:
+Enable the SDDM service in man:rc.conf[5] to start at system boot:
 
 [source,shell]
 ....
 # sysrc sddm_enable="YES"
 ....
 
-The keyboard language can be set in SDDM by running the following command (for Spanish, for example):
+A keyboard language, in this case Spanish, can be set in SDDM with the following command:
 
 [source,shell]
 ....
 # sysrc sddm_lang="es_ES"
 ....
 
-A second method to start KDE Plasma is by manually invoking man:startx[1].
+Alternatively, start Plasma in an Xorg session is by manually invoking man:startx[1].
 For this to work, the following line is needed in ~/.xinitrc:
 
 [source,shell]
 ....
 % echo "exec dbus-launch --exit-with-x11 ck-launch-session startplasma-x11" > ~/.xinitrc
+....
+
+Experimentally, start Plasma manually in a Wayland session by executing the following command:
+
+[source,shell]
+....
+% exec dbus-launch ck-launch-session startplasma-wayland
 ....
 
 [[gnome-environment]]
