website: RU - update ru/news
Translation of the latest security advisories
and the errata notices

--- a/website/content/ru/releases/15.0R/errata.adoc
+++ b/website/content/ru/releases/15.0R/errata.adoc
@@ -45,7 +45,7 @@ sidenav: download
 |===
 |Бюллетень |Дата |Тема
 
-|Бюллетеня нет.||
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:12.rtsold.asc[FreeBSD-SA-25:12.rtsold] |16 декабря 2025 |Удаленное выполнение кода через ND6 Router Advertisements
 
 |===
 
@@ -56,7 +56,8 @@ sidenav: download
 |===
 |Исправление |Дата |Тема
 
-|Уведомлений об ошибках нет.||
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:19.zfs.asc[FreeBSD-EN-25:19.zfs] |16 декабря 2025 |Обращение к нулевому указателю в ядре от непривилегированного пользователя
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:20.vmm.asc[FreeBSD-EN-25:20.vmm] |16 декабря 2025 |Регрессия PCI passthru в bhyve(8)
 
 |===
 
@@ -73,5 +74,5 @@ sidenav: download
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (14.04.2025): ed4f354d57860c84bf8be21fd5a9f78c08ce2a24
+// Original EN revision (17.12.2025): 09c6d3560c1afbf94282f8cc2e5baf6b4602b17c
 //
