Document __FreeBSD_version bumps 1500504 and 1403507

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -300,6 +300,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |August 18, 2025
 |15.0-CURRENT after certctl rewrite, which now produces a bundle.
 
+|1500504
+|gitref:3fbce8315ee22ef3a3e0fde3c57130e6ad16535f[repository="src",length=12]
+|December 18, 2025
+|15.0-STABLE after changing the `bus_alloc_resource` API to accept the `rid` argument by value.
+
 |===
 
 [[versions-14]]
@@ -833,6 +838,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |gitref:6cdcf08c9c5eda6dc3b8395cefd9d30a4f5e2f1a[repository="src",length=12]
 |July 13, 2025
 |14.3-STABLE after LinuxKPI dma-mapping.h and acpi changes.
+
+|1403507
+|gitref:108b5d90bc1fa8ed83cfd6f58e636193e03e8049[repository="src",length=12]
+|December 18, 2025
+|14.3-STABLE after changing the `bus_alloc_resource` API to accept the `rid` argument by value.
 
 |===
 
