Document various missing __FreeBSD_version values.

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -260,6 +260,36 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |January 2, 2025
 |15.0-CURRENT after changing `bus_generic_detach` to delete child devices after detaching them.
 
+|1500031
+|gitref:0009c4e737b17f69f1b3f856e87a392073aeb48e[repository="src",length=12]
+|February 1, 2025
+|15.0-CURRENT after switching kernel RPC services to using netlink.
+
+|1500032
+|gitref:464372940b365b6109866440f5ce96f41b084f86[repository="src",length=12]
+|February 14, 2025
+|15.0-CURRENT after the internal API between the nfscommon and nfscl modules changed.
+
+|1500033
+|gitref:05dfaadde4ae0f5d823836d5d849e3ba5ebdbf17[repository="src",length=12]
+|February 19, 2025
+|15.0-CURRENT after adding `shrinker_alloc` and `shrinker_free` to LinuxKPI.
+
+|1500034
+|gitref:6ba1c5abb9575aaf4ef0a7efb085d42be252e645[repository="src",length=12]
+|March 3, 2025
+|15.0-CURRENT after changing the ABI between man:ipfw[4] and man:ipfw[8].
+
+|1500035
+|gitref:d5c804138845a1c8d81fbbce48de676806de32e6[repository="src",length=12]
+|March 26, 2025
+|15.0-CURRENT after adding missing symbols to Heimdal library symbol maps.
+
+|1500036
+|gitref:85967694b4590a436c56a061b397620e342784ae[repository="src",length=12]
+|April 9, 2025
+|15.0-CURRENT after changing the linkage between bridges and `struct ifnet`
+
 |1500037
 |gitref:7acd5af48cf1870ec48d5910dff1a26466d98074[repository="src",length=12]
 |April 12, 2025
@@ -280,15 +310,110 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |May 4, 2025
 |15.0-CURRENT after the internal API between the nfscommon and nfscl modules changed.
 
+|1500041
+|gitref:794e792121bab69243836f34d89c05346b859811[repository="src",length=12]
+|May 6, 2025
+|15.0-CURRENT after removing the `memq` field from `struct vm_object`.
+
+|1500042
+|gitref:2fa185f9bf5948ead9c3920d452ddd6bcad8f569[repository="src",length=12]
+|May 9, 2025
+|15.0-CURRENT after deprecating the `CRYPTO_F_DONE` flag in OCF.
+
+|1500043
+|gitref:a1215090416b8afb346fb2ff5b38f25ba0134a3a[repository="src",length=12]
+|May 15, 2025
+|15.0-CURRENT after adding stricter address format checking in `link_addr`.
+
+|1500044
+|gitref:0ec732913fceb9aae2d56c2dd667203711b76550[repository="src",length=12]
+|May 28, 2025
+|15.0-CURRENT after adding `PCB_TLSBASE` on amd64.
+
 |1500045
 |gitref:a02180cf60a6a0102669b678e9c81ad9f1aa4d91[repository="src",length=12]
 |June 3, 2025
 |15.0-CURRENT after pulling in dma-mapping.h changes from drm-kmod to LinuxKPI.
 
+|1500046
+|gitref:1fee99800a79887b9037749a34d09f2acab082c0[repository="src",length=12]
+|June 8, 2025
+|15.0-CURRENT after removing the `listq` field from `struct vm_page`.
+
+|1500047
+|gitref:29d0bcfd07e366bb5cf55b63419c3976f0a80bd6[repository="src",length=12]
+|June 15, 2025
+|15.0-CURRENT after importing MIT Kerberos.
+
+|1500048
+|gitref:e3a4b989d7f7d82f7ab8cefe0d665dbe6b74d316[repository="src",length=12]
+|June 17, 2025
+|15.0-CURRENT after switching to 256 distinct run queues.
+
+|1500049
+|gitref:d8c5c513e1cbca329a75fa6ea5f5064c3a1d78b2[repository="src",length=12]
+|June 30, 2025
+|15.0-CURRENT after the internal API between the nfscommon and nfscl modules changed.
+
+|1500050
+|gitref:842da154a0ce8f866d65f495537a13ffa8fb9cc0[repository="src",length=12]
+|July 4, 2025
+|15.0-CURRENT after LinuxKPI changes.
+
 |1500051
-|gitref:4dd828c80828637452a8a4e07a64e294c82e5d8b[repository="src",length=12]
-|Jul 15, 2025
+|gitref:65ed1a035ceb8f7c323c0bc0c7344a7fa7cadc9f[repository="src",length=12]
+|July 5, 2025
+|15.0-CURRENT after adding support for configuring vlan filtering for bridge members.
+
+|1500052
+|gitref:ff2dc0bca3728448284d757ca983d023da7279b5[repository="src",length=12]
+|July 16, 2025
 |15.0-CURRENT after the addition of kva_layout and removal of DMAP_MIN/MAX_ADDRESS.
+
+|1500053
+|gitref:04055decc91c5911498bfcb924d26f37803ecb3a[repository="src",length=12]
+|July 19, 2025
+|15.0-CURRENT after the internal API between the nfscommon and nfscl modules changed.
+
+|1500054
+|gitref:c7da9fb90b0b6385e99bb7747476359b712993fa[repository="src",length=12]
+|July 21, 2025
+|15.0-CURRENT after switching from Heimdal to MIT Kerberos.
+
+|1500055
+|gitref:dd0ec030f8fddfd109b860ae8df2b29fa0c60f23[repository="src",length=12]
+|July 27, 2025
+|15.0-CURRENT after adding symbol versioning to Kerberos libraries.
+
+|1500056
+|gitref:4befc6711ab25912c3378afe5a2989945acf803f[repository="src",length=12]
+|July 30, 2025
+|15.0-CURRENT after moving `cr_gid` out of `cr_groups` in `struct ucred`.
+
+|1500057
+|gitref:b3340428f394d08b9776899c7f6dc16ed5fd590c[repository="src",length=12]
+|August 7, 2025
+|15.0-CURRENT after adding symbol versioning to libutil.
+
+|1500058
+|gitref:4c6c27d3fb4ad15931aae2eaf8e624aed99a3fd9[repository="src",length=12]
+|August 8, 2025
+|15.0-CURRENT after adding support for TBI on arm64.
+
+|1500059
+|gitref:db7c0e32a05dd7011553321e82ac66dd712eaf09[repository="src",length=12]
+|August 9, 2025
+|15.0-CURRENT after importing OpenSSL 3.5.1.
+
+|1500060
+|gitref:f13e8ea08310fe8a0d8bc7817ae428939f8e5144[repository="src",length=12]
+|August 13, 2025
+|15.0-CURRENT after adding `gpiobus_add_bus` and removing `gpiobus_attach_bus`.
+
+|1500061
+|gitref:dd22a6853d92e4b94431988cb1d7a5fa498d24ab[repository="src",length=12]
+|August 16, 2025
+|15.0-CURRENT after changing `getgroups` and `setgroups` to only work with supplementary groups.
 
 |1500062
 |gitref:567e6250c003eeb251b4bc8dbe60d2adabab2988[repository="src",length=12]
@@ -299,6 +424,41 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |gitref:c340ef28fd384b567e35882d04ce17fa31b7384f[repository="src",length=12]
 |August 18, 2025
 |15.0-CURRENT after certctl rewrite, which now produces a bundle.
+
+|1500064
+|gitref:6e7cc49f94cf9760125ab1699b6eb9b8311394a5[repository="src",length=12]
+|September 4, 2025
+|15.0-STABLE after branching stable/15.
+
+|1500065
+|gitref:a38672e64a1ce9a156d1888ffc505252da3e4cf1[repository="src",length=12]
+|September 30, 2025
+|15.0-STABLE after LinuxKPI PCI changes.
+
+|1500066
+|gitref:5a31c623143f4a20e5b5fb337ec97ac0b39635fc[repository="src",length=12]
+|October 2, 2025
+|15.0-STABLE after importing `virtual_oss`.
+
+|1500500
+|gitref:b15f726dfe60b436bb92876f8f0a1238641fee76[repository="src",length=12]
+|October 9, 2025
+|15.0-STABLE after branching releng/15.0.
+
+|1500501
+|gitref:a4ee95e54ad1e6a00be4dbaf9c3476915c212918[repository="src",length=12]
+|October 23, 2025
+|15.0-STABLE after LinuxKPI changes.
+
+|1500502
+|gitref:33d15245f9be27336035c41fcf7c78ab50f3e6cc[repository="src",length=12]
+|November 23, 2025
+|15.0-STABLE after the internal API between the nfscommon and nfscl modules changed.
+
+|1500503
+|gitref:398dd921c382760236acefe8f893912a2efd1696[repository="src",length=12]
+|December 1, 2025
+|15.0-STABLE after adding man:exterror[9] tracking to `struct buf` and `struct bio`.
 
 |1500504
 |gitref:3fbce8315ee22ef3a3e0fde3c57130e6ad16535f[repository="src",length=12]
@@ -834,10 +994,40 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |April 18, 2025
 |14.2-STABLE after changing alloc changes to LinuxKPI and removing iwlwifi firmware.
 
+|1403500
+|gitref:61bcd8183104bcae6fa9e3db460a15dc15c1600a[repository="src",length=12]
+|May 2, 2025
+|14.3-STABLE after it was renamed from 14.3-PRERELEASE.
+
+|1403501
+|gitref:37303e96528e3c4662a464cfc778ddaa5194a3d1[repository="src",length=12]
+|May 20, 2025
+|14.3-STABLE after adding stricter address format checking in `link_addr`.
+
+|1403502
+|gitref:b7291e0da6ff485854ba07a0f8e18fb7b60ef5ba[repository="src",length=12]
+|June 12, 2025
+|14.3-STABLE after adding `PCB_TLSBASE` on amd64.
+
 |1403503
 |gitref:6cdcf08c9c5eda6dc3b8395cefd9d30a4f5e2f1a[repository="src",length=12]
 |July 13, 2025
 |14.3-STABLE after LinuxKPI dma-mapping.h and acpi changes.
+
+|1403504
+|gitref:590d12774f8f921a3181dc0b893612925b041394[repository="src",length=12]
+|July 28, 2025
+|14.3-STABLE after switching to 256 distinct run queues.
+
+|1403505
+|gitref:4f22d274ab0d1da23c000e4f7f2ea003c5fa94a7[repository="src",length=12]
+|August 23, 2025
+|14.3-STABLE after adding the `xattrsupp` argument to `nfsv4_fillattr`.
+
+|1403506
+|gitref:4612f5f2d23348c8a861834d4c9f98b0a2742f56[repository="src",length=12]
+|August 28, 2025
+|14.3-STABLE after introduction of VTYPE_ISDEV(), VN_ISDEV(), and VATTR_ISDEV().
 
 |1403507
 |gitref:108b5d90bc1fa8ed83cfd6f58e636193e03e8049[repository="src",length=12]
