--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -53,26 +53,28 @@ Clearly the release notes cannot list every single change made to FreeBSD betwee
 [[upgrade]]
 == Upgrading from Previous Releases of FreeBSD
 
-Binary upgrades between RELEASE versions (and snapshots of the various security branches) are supported using the man:freebsd-update[8] utility.
-See the release-specific upgrade procedure, link:../installation/#upgrade-binary[FreeBSD {releaseCurrent} upgrade information], with more details in the FreeBSD handbook link:{handbook}cutting-edge/#freebsdupdate-upgrade[binary upgrade procedure].
-This will update unmodified userland utilities, as well as unmodified GENERIC kernels distributed as a part of an official FreeBSD release.
-The man:freebsd-update[8] utility requires that the host being upgraded have Internet connectivity.
-
-Source-based upgrades (those based on recompiling the FreeBSD base system from source code) from previous versions are supported, according to the instructions in [.filename]#/usr/src/UPDATING#.
-
 [IMPORTANT]
 ====
 Upgrading FreeBSD should only be attempted after backing up _all_ data and configuration files.
 ====
 
+[[upgrade-fu]]
+=== Upgrading from Distribution Sets
+
+Binary upgrades between snapshots and RELEASE versions are supported using the man:freebsd-update[8] utility.
+See the release-specific upgrade procedure, link:../installation/#upgrade-binary[FreeBSD {releaseCurrent} upgrade information], with more details in the FreeBSD handbook link:{handbook}cutting-edge/#freebsdupdate-upgrade[binary upgrade procedure].
+This will update unmodified userland utilities, as well as unmodified GENERIC kernels distributed as a part of an official FreeBSD release.
+The man:freebsd-update[8] utility requires that the host being upgraded have Internet connectivity.
+
 [[upgrade-rc]]
-== Upgrading from Existing Pre-Release Base System Package Installs
+=== Upgrading from Packages
+
 [IMPORTANT]
 ====
-For users of PRERELEASE, ALPHA, and BETA builds of FreeBSD 15.0, due to late-breaking changes in FreeBSD.org infrastructure, it is not possible to upgrade directly using the man:pkg-upgrade[8] utility.
+For users of PRERELEASE, ALPHA, and BETA builds of FreeBSD 15.0, due to late-breaking changes in FreeBSD.org infrastructure, it is not possible to upgrade directly using the man:pkg[8] utility.
 ====
 
-Users should either manually copy the required files from a source tree checkout of `15.0-RELEASE` tag, or a later commit in `STABLE` or `CURRENT` branches, or alternatively, force-install the `FreeBSD-pkg-bootstrap` package from the official release base system packages.
+Packaged base system installations require either manually copying the required files from a source tree checkout of the `15.0-RELEASE` tag, or alternatively, force-install the `FreeBSD-pkg-bootstrap` package from the official release base system packages.
 
 The recommended, and most secure approach, is using the source tree checkout of any of head, stable/15, or releng/15.0 branches after 2025-11-27 22:00 UTC.
 
@@ -82,7 +84,7 @@ The recommended, and most secure approach, is using the source tree checkout of 
 # cp -R /usr/src/share/keys/pkgbase-15 /usr/share/keys/pkgbase-15
 ....
 
-Users who do not have up to date sources installed may use a less secure, but simpler approach, validating the checksums after installation. As these are architecture-independent files, the checksums will match on all platforms. The FreeBSD-base package repository will need to be enabled before upgrading via man:pkg[8].
+Users who do not have up to date sources installed may use a less secure, but simpler approach, validating the checksums after installation. As these are architecture-independent files, the checksums will match on all platforms. The FreeBSD-base package repository will need to be enabled before upgrading via man:pkg[8]:
 
 ....
 # pkg add -f https://pkg.freebsd.org/FreeBSD:15:$(uname -p)/base_release_0/FreeBSD-pkg-bootstrap-15.0.pkg
@@ -96,10 +98,11 @@ c368ec8d05654bdaad34742c1d75b9b150bfc3892838cef32f6e5b036b0c0605 /usr/share/keys
 # echo "FreeBSD-base: { enabled: yes }" > /usr/local/etc/pkg/repos/FreeBSD.conf
 ....
 
-[IMPORTANT]
-====
-Upgrading FreeBSD should only be attempted after backing up _all_ data and configuration files.
-====
+[[upgrade-mk]]
+=== Upgrading from Source
+
+Source-based upgrades from previous versions are supported via compiling the releng/15.0 branch.
+Refer to the instructions in [.filename]#/usr/src/UPDATING#.
 
 [[security-errata]]
 == Included Security Fixes and Errata Patches
