--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -31,6 +31,9 @@
 :rel-head-major: 16
 :rel-head: {rel-head-major}.0
 
+// Current latest RELEASE for handbook examples.
+:rel-latest: 15.0
+
 // If there is no release currently in the release cycle (i.e. we
 // don't have something in BETAn or RCn), then change %beta.testing
 // below to "IGNORE".  If we do, use "INCLUDE".
