about: Get number of ports from releases
End the discrepancy!

Reviewed by:		carlavilla, lwhsu
Differential Revision:	https://reviews.freebsd.org/D54330

--- a/website/content/en/about.adoc
+++ b/website/content/en/about.adoc
@@ -4,6 +4,7 @@ sidenav: about
 ---
 
 include::shared/en/urls.adoc[]
+include::shared/releases.adoc[]
 
 = About FreeBSD
 
@@ -25,7 +26,7 @@ FreeBSD brings advanced network operating system features to appliance and embed
 
 == Run a huge number of applications
 
-With over 33,000 ported libraries and link:../applications[applications], FreeBSD supports applications for desktop, server, appliance, and embedded environments.
+With over {numports} ported libraries and link:../applications[applications], FreeBSD supports applications for desktop, server, appliance, and embedded environments.
 
 == Easy to install
 
