--- a/website/content/zh-tw/about.adoc
+++ b/website/content/zh-tw/about.adoc
@@ -3,6 +3,7 @@ title: 關於 FreeBSD
 sidenav: about
 ---
 
+include::shared/releases.adoc[]
 include::shared/zh-tw/urls.adoc[]
 
 = 關於 FreeBSD
@@ -25,7 +26,7 @@ FreeBSD 提供嵌入式平台和裝置先進的網路作業系統特色，從高
 
 == 能夠運行大量的應用
 
-有超過 33,000 個做成 ports 的程式庫和link:../applications[應用程式]， FreeBSD 提供了桌面、伺服器、裝置和嵌入式環境的應用程式。
+有超過 {numports} 個做成 ports 的程式庫和link:../applications[應用程式]， FreeBSD 提供了桌面、伺服器、裝置和嵌入式環境的應用程式。
 
 == 易於安裝
 
